-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 23
-
Component/s: hotspot
-
b06
-
x86
-
linux, os_x
When building with ubsan (--enable-ubsan configure option) we run into this issue
/open_jdk/jdk_test/jdk/src/hotspot/share/code/vtableStubs.hpp:176:60: runtime error: load of value 204, which is not a valid value for type 'bool'
#0 0x110a6ad7e in VtableStubs::entry_point(unsigned char*) vtableStubs.cpp:280
#1 0x10f4cc8e6 in CompiledIC::is_megamorphic() const compiledIC.cpp:293
#2 0x10f4cc95d in CompiledIC::update(CallInfo*, Klass*) compiledIC.cpp:268
#3 0x110592eed in SharedRuntime::resolve_helper(bool, bool, JavaThread*) sharedRuntime.cpp:1366
#4 0x11058c0b3 in SharedRuntime::resolve_virtual_call_C(JavaThread*) sharedRuntime.cpp:1514
#5 0x12cd2e55a (<unknown module>)
#6 0x12580e03b (<unknown module>)
#7 0x12cc1f321 (<unknown module>)
#8 0x12cc1f321 (<unknown module>)
Not sure where the 204 is coming from; test was done on macOS x86_64 .
/open_jdk/jdk_test/jdk/src/hotspot/share/code/vtableStubs.hpp:176:60: runtime error: load of value 204, which is not a valid value for type 'bool'
#0 0x110a6ad7e in VtableStubs::entry_point(unsigned char*) vtableStubs.cpp:280
#1 0x10f4cc8e6 in CompiledIC::is_megamorphic() const compiledIC.cpp:293
#2 0x10f4cc95d in CompiledIC::update(CallInfo*, Klass*) compiledIC.cpp:268
#3 0x110592eed in SharedRuntime::resolve_helper(bool, bool, JavaThread*) sharedRuntime.cpp:1366
#4 0x11058c0b3 in SharedRuntime::resolve_virtual_call_C(JavaThread*) sharedRuntime.cpp:1514
#5 0x12cd2e55a (<unknown module>)
#6 0x12580e03b (<unknown module>)
#7 0x12cc1f321 (<unknown module>)
#8 0x12cc1f321 (<unknown module>)
Not sure where the 204 is coming from; test was done on macOS x86_64 .
- relates to
-
JDK-8335237 ubsan: vtableStubs.hpp is_vtable_stub exclude from ubsan checks
-
- Resolved
-
-
JDK-8336256 memcpy short value to int local is incorrect in VtableStubs::unsafe_hash
-
- Closed
-
- links to
-
Commit(master)
openjdk/jdk/fb66716a
-
Review(master)
openjdk/jdk/19968