8331725: ubsan: pc may not always be the entry point for a VtableStub